--- a/_sass/_nowrapper.scss
+++ b/_sass/_nowrapper.scss
@@ -24,11 +24,10 @@
      */
     .post-header {
         margin-bottom: $spacing-unit * 2;
-        padding-top: $spacing-unit * 2;
         text-align: center;
 
         .post-title {
-            padding-top: 0;
+            padding-top: $spacing-unit * 2;
             text-transform: uppercase;
             font-family: $header-font-family;
             font-weight: 500;
@@ -38,9 +37,8 @@
             margin-bottom: 0;
 
             @include media-query($on-phone) {
-                font-size: 38px;
-                margin-bottom: $spacing-unit;
-                padding-top: $spacing-unit;
+                padding: 0;
+                font-size: 24px;
             }
         }
 
@@ -66,14 +64,20 @@
             margin-bottom: 0;
 
             @include media-query($on-phone) {
-                font-size: $small-font-size - 4;
+                font-size: $small-font-size;
             }
         }
+
         .danhr {
             height: 2px;
             width: 60%;
             margin: 10px 20%;
             background-color: $text-color;
+        }
+
+        @include media-query($on-phone) {
+            padding-top: $spacing-unit;
+            margin-bottom: $spacing-unit;
         }
     }
 
@@ -100,9 +104,13 @@
         margin-top: $spacing-unit * 2;
         margin-left: auto;
         margin-right: auto;
-        margin-bottom: 0;
-        max-width: 858px;
-        max-height: 572px;
+        max-width: 800px;
+        max-height: 800px;
+        overflow: hidden;
+
+        img {
+            width: 100%;
+        }
 
         @include media-query($on-phone) {
             margin-top: $spacing-unit;
